overlays/production-loadbalancer/haproxy-ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: haproxy-ingress
  namespace: jitsi
spec:
  tls:
  - hosts:
    - jitsi.peopleundercloud.com
    secretName: jitsi-peopleundercloud-tls
  rules:
    - host: jitsi.peopleundercloud.com
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
            service:
              name: haproxy
              port:
                number: 80
